Issue in displaying alembic #105409

Closed
opened 2023-03-03 17:49:38 +01:00 by Robert Rioux · 11 comments

System Information
Operating system: macOS-12.3.1-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro Vega 64 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.15

Blender Version
Broken: version: 3.4.0 Beta, branch: blender-v3.4-release, commit date: 2022-11-20 17:41, hash: rB03b7982301d0
Worked: (newest version of Blender that worked as expected)

Short description of error
Display errors at frames 37 and 53

Exact steps for others to reproduce the error
open attached file. Relink the alembic. You will see the geometry gets corrupted on frames 37 and 53. The same alembic works perfectly in Maya and Houdini, so I conclude that it's a Blender issue.

**System Information** Operating system: macOS-12.3.1-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro Vega 64 OpenGL Engine ATI Technologies Inc. 4.1 ATI-4.8.15 **Blender Version** Broken: version: 3.4.0 Beta, branch: blender-v3.4-release, commit date: 2022-11-20 17:41, hash: `rB03b7982301d0` Worked: (newest version of Blender that worked as expected) **Short description of error** Display errors at frames 37 and 53 **Exact steps for others to reproduce the error** open attached file. Relink the alembic. You will see the geometry gets corrupted on frames 37 and 53. The same alembic works perfectly in Maya and Houdini, so I conclude that it's a Blender issue.
Robert Rioux added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-03 17:49:38 +01:00
Author

These are frame 52 ans 53

These are frame 52 ans 53
Iliya Katushenock added the
Interest
Alembic
Interest
EEVEE & Viewport
Interest
Modeling
labels 2023-03-03 18:02:35 +01:00

Can you explain more in detail what you mean by relinking? I am rarely working with abc files, so want to be sure that I understand the problem.

Can you explain more in detail what you mean by relinking? I am rarely working with abc files, so want to be sure that I understand the problem.
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-03-03 18:10:08 +01:00
Author

The alembic file is linked to my desktop at home, not on your computer so you just need to change the path in the modifier.

The alembic file is linked to my desktop at home, not on your computer so you just need to change the path in the modifier.
Author

If I turn off vertex interpolation it works but the motion blur is not looking good.

If I turn off vertex interpolation it works but the motion blur is not looking good.

I can't reproduce this issue. I have noticed, that you are using old beta version, please download fresh alpha build from https://builder.blender.org/download/daily/ and check if issue persists.

I can't reproduce this issue. I have noticed, that you are using old beta version, please download fresh alpha build from https://builder.blender.org/download/daily/ and check if issue persists.
Author

No, still have the same issue in 3.4.1. Did you check frame 37?

No, still have the same issue in 3.4.1. Did you check frame 37?

Can you check version 3.6? I have checked all the frames, I witnessed nothing out of ordinary.

Can you check version 3.6? I have checked all the frames, I witnessed nothing out of ordinary.
Author

Same in 3.6

Same in 3.6

Thanks for checking. Can you perhaps check downloading provided data to different path to double check, that the issue is reproducible? There shouldn't be any external caches, so it should be, but I have trouble reproducing.

Thanks for checking. Can you perhaps check downloading provided data to different path to double check, that the issue is reproducible? There shouldn't be any external caches, so it should be, but I have trouble reproducing.
Author

Try with this alembic. I sent you the one I passed though Maya instead. Doh! Still, the one from Maya doesn't create the distortion but the textures are broken on these two frames.

Try with this alembic. I sent you the one I passed though Maya instead. Doh! Still, the one from Maya doesn't create the distortion but the textures are broken on these two frames.

I can confirm the glitches, it works fine with https://i-saint.github.io/AlembicViewer/, so will confirm

I can confirm the glitches, it works fine with https://i-saint.github.io/AlembicViewer/, so will confirm
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-06-14 14:29:52 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-15 03:41:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105409
No description provided.