source/blender/io/alembic/intern/abc_reader_object.h
@@ -77,7 +77,11 @@ class AbcObjectReader {
   Object *m_object;
   Alembic::Abc::IObject m_iobject;
 
+  /* XXX - TODO(kevindietrich) : this references stack memory... */
   ImportSettings *m_settings;
+  /* This is initialised from the ImportSettings above on construction. It will need to be removed
+   * once we fix the stack memory reference situation.  */
+  bool m_is_reading_a_file_sequence = false;
 
   chrono_t m_min_time;
   chrono_t m_max_time;
